# TIM-VX

./: CMakeLists.txt
cmake/: synap.cmake
include/tim/vx/: graph.h
src/tim/: CMakeLists.txt
src/tim/transform/: mean_stddev_normalize_fusion.cc
src/tim/vx/: graph_private.h
src/tim/vx/synap/: CMakeLists.txt  graph_synap.cc  graph_synap.h
